--- a/css/style.css
+++ b/css/style.css
@@ -546,7 +546,7 @@ header .nav-bar {
 
 .contact-bg {
     height: 40vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(/images/contattibg.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(images/contattibg.jpg);
     background-position: 50% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
